@@ -11,6 +11,9 @@
   * src/bfin/bfin-part-bfin.c (bfin_init): Add BF548M and BF592.
   * data/analog/PARTS: Add note that bfin_init() needs to be in sync.
 
+  * src/bfin/bfin.c (bfin_set_scan): Replace assert() with a more helpful error
+    message showing the instruction that had a problem with loading.
+
 2010-02-08  Jie Zhang  <jie.zhang@analog.com>
 
   * include/urjtag/part.h (struct URJ_PART_PARAMS): Add wait_ready.
